<resources>
    <string name="app_name">Mapapp</string>
    <string name="signin">Sign In</string>
    <string name="signup">Not yet registered? Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_registration">Registration</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCuBNM8B0PSBQ-9iREWbX26ikDjW2QKZmI</string>
    <string name="title_activity_maps2">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="newpost">New Post</string>
    <string name="seealpost">See All my Post</string>
    <string name="Seeylove">See your Lovables</string>
    <string name="changecity">Change City</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Log out</string>
    <string name="registertitle">Registration</string>
    <string name="notregistred">Not Registred yet? Sign Up</string>
    <string name="title_activity_fbactivity">fbactivity</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_see_lovable">Map</string>
</resources>
