<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/newpost"
            android:title="@string/newpost">

        </item>
        <item
            android:id="@+id/smypost"
            android:title="@string/seealpost">

        </item>
        <item
            android:id="@+id/sylove"
            android:title="@string/Seeylove">

        </item>
        <item
            android:id="@+id/chcity"
            android:title="@string/changecity">

        </item>
        <item
            android:id="@+id/refresh"
            android:title="@string/refresh">

        </item>
        <item
            android:id="@+id/logout"
            android:title="@string/logout">

        </item>

    </group>
    <include layout="@layout/activity_maps" />
</menu>
